# omuchat

./: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .gitmodules  .prettierrc  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README-py.md  README.md  bun.lockb  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  svelte.config.js  sveltekit.ts  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  publish-npm.yml  publish-pypi.yml  publish-tauri.yml  publish.yml  storybook.yml  test.yml
documentation/create/: index.md
packages-js/chat/: CHANGELOG.md  README.md  package.json
packages-js/chat/src/: chat.ts  index.ts  permissions.ts
packages-js/dash/: .stylelintignore  package.json
packages-js/dash/scripts/: build-pre.mjs
packages-js/dash/src/: vite-env.d.ts
packages-js/dash/src-tauri/: Cargo.toml  tauri.conf.json
packages-js/dash/src-tauri/icons/: icon.icns
packages-js/dash/src-tauri/src/: app.rs  main.rs  options.rs  server.rs  sync.rs  uv.rs  version.rs
packages-js/dash/src-tauri/src/utils/: download.rs  mod.rs
packages-js/flat/: package.json  tsconfig.json
packages-js/flat-gl/: package.json
packages-js/flat-gl/src/: glcontext.ts  index.ts
packages-js/flat/src/: bytebuffer.ts  flat.ts  index.ts  layer.ts  property.ts  scene.ts  serializer.ts
packages-js/i18n/: CHANGELOG.md  package.json  tsconfig.json
packages-js/i18n/src/: index.ts
packages-js/omu/: CHANGELOG.md  package.json
packages-js/omu/src/: app.ts  event-emitter.ts  index.ts  interface.ts  model.ts  omu.ts  serializer.ts  token.ts
packages-js/shared/: .eslintrc.cjs  tsconfig.json
packages-js/site/: package.json  vite.config.ts
packages-js/site/src/: cloudflare.d.ts
packages-js/ui/: .eslintrc.cjs  .gitignore  CHANGELOG.md  README.md  package.json  svelte.config.js  tsconfig.json
packages-js/ui/.storybook/: preview.ts
packages-py/chat/: pyproject.toml
packages-py/chat-provider/: pyproject.toml
packages-py/chat-youtube/: pyproject.toml
packages-py/omu/: pyproject.toml
packages-py/plugin-archive/: pyproject.toml
packages-py/plugin-chat/: pyproject.toml
packages-py/plugin-emoji/: pyproject.toml
packages-py/plugin-marshmallow/: pyproject.toml
packages-py/plugin-nyanya/: pyproject.toml
packages-py/plugin-obssync/: pyproject.toml
packages-py/plugin-onecomme/: pyproject.toml
packages-py/plugin-translator/: pyproject.toml
packages-py/server/: pyproject.toml
script/: dev-setup.mjs  license.mjs  setup.mjs  tabler-icons.cjs  tabler-icons.mjs
scripts/: build-tauri.mjs  build.mjs  clean.mjs  dev.mjs  helper.py  init.mjs  js-build.mjs  js-clean.mjs  js-dev.mjs  postinstall.mjs  py-clean.py  py-gen_token.py  py-generate_version.py  py-prelaunch.py  py-version.py
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/app/: gui.rs  mod.rs  runtime.rs  state.rs
src-tauri/src/python/: mod.rs  python_downloader.rs  runtime.rs
src-tauri/src/util/: extract.rs  mod.rs
src/lib/: Window.svelte  const.ts
src/lib/apps/: apps.ts
src/lib/common/: Button.svelte  (+15 more)
src/omuproject/: dummy.py
src/routes/: +layout.svelte  +page.svelte  styles.scss
static/: .gitignore
(+375 files in other folders)
