[project]
name = "omuproject"
version = "0.4.5"
description = "Add your description here"
authors = [
    { name = "am230", email = "111672334+am230@users.noreply.github.com" },
]
dependencies = []
readme = "README.md"
# 3.12.0 project, but cloudflare pages is uses 3.11.5.
requires-python = ">=3.11.5"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "loguru>=0.7.2",
    "ruff>=0.1.6",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.355",
]

[tool.rye.scripts]
clean = "python ./scripts/py-clean.py"
gen_version = "python ./scripts/py-generate_version.py"
prelaunch = "python ./scripts/py-prelaunch.py"

[tool.rye.workspace]
members = ["packages-py/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/omuproject"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
]
