[package]
name = "omuapps"
version = "0.1.0"
description = "A OMUAPPS client built with Tauri."
authors = ["2ji_han"]
license = ""
repository = ""
default-run = "omuapps"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "updater",
    "system-tray",
    "window-set-focus",
    "window-show",
    "window-unminimize",
    "dialog-all",
    "window-hide",
    "window-close",
    "window-create",
    "window-start-dragging",
    "window-minimize",
    "fs-read-file",
    "window-unmaximize",
    "window-maximize",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pep440_rs = "0.4.0"
anyhow = { version = "1.0.70", features = ["backtrace"] }
curl = { version = "0.4.44", features = ["ssl", "static-curl", "static-ssl"] }
directories = "5.0.1"
once_cell = "1.19.0"
tempfile = "3.10.1"
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.8.5"
# plugins
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-shadows = "0.2.1"

# extract
zstd = "0.13.0"
flate2 = "1.0.25"
bzip2 = "0.4.4"
zip = { version = "0.6.5", features = ["deflate"], default-features = false }
tar = "0.4.38"
portpicker = "0.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
